log
do., 13 de mar. de 2022  2:36:56: 
 tests:  0|7
total_score: 0/70
9ab4d9d
do., 13 de mar. de 2022 12:54:39: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
6ac0a89
do., 13 de mar. de 2022 14:36:44: 
 exercises.c | 8 +++++++-
 1 file changed, 7 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'crearPersona':
exercises.c:63:4: error: too few arguments to function 'strcpy'
    strcpy(p.nombre)
    ^~~~~~
In file included from test.c:3:0:
c:\mingw\include\string.h:79:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  char *strcpy (char *, const char *);
                                        ^~~~~~
In file included from test.c:5:0:
exercises.c:64:4: error: expected ';' before 'return'
    return NULL;
    ^~~~~~
exercises.c:65:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
11665b4
